--- a/template.html
+++ b/template.html
@@ -152,70 +152,166 @@ output_data &lt;- data.frame(Top5Injuries=row.names(t_inj)[1:5],
                           Top5CropDamage=row.names(t_cro)[1:5],
                           CropDamage=t_cro[1:5,&quot;CROPDMG&quot;])
 #print the table
-kable(output_data)</code></pre>
+kable(output_data, format='html')</code></pre>
 <table>
 <thead>
-<tr class="header">
-<th align="left">Top5Injuries</th>
-<th align="right">Injuries</th>
-<th align="left">Top5Fatalities</th>
-<th align="right">Fatalities</th>
-<th align="left">Top5PropertyDamage</th>
-<th align="right">PropertyDamage</th>
-<th align="left">Top5CropDamage</th>
-<th align="right">CropDamage</th>
+<tr>
+<th style="text-align:left;">
+Top5Injuries
+</th>
+<th style="text-align:right;">
+Injuries
+</th>
+<th style="text-align:left;">
+Top5Fatalities
+</th>
+<th style="text-align:right;">
+Fatalities
+</th>
+<th style="text-align:left;">
+Top5PropertyDamage
+</th>
+<th style="text-align:right;">
+PropertyDamage
+</th>
+<th style="text-align:left;">
+Top5CropDamage
+</th>
+<th style="text-align:right;">
+CropDamage
+</th>
 </tr>
 </thead>
 <tbody>
-<tr class="odd">
-<td align="left">TORNADO</td>
-<td align="right">23371</td>
-<td align="left">HEAT</td>
-<td align="right">3138</td>
-<td align="left">WIND</td>
-<td align="right">3134605.3</td>
-<td align="left">HAIL</td>
-<td align="right">585956.7</td>
+<tr>
+<td style="text-align:left;">
+TORNADO
+</td>
+<td style="text-align:right;">
+23371
+</td>
+<td style="text-align:left;">
+HEAT
+</td>
+<td style="text-align:right;">
+3138
+</td>
+<td style="text-align:left;">
+WIND
+</td>
+<td style="text-align:right;">
+3134605.3
+</td>
+<td style="text-align:left;">
+HAIL
+</td>
+<td style="text-align:right;">
+585956.7
+</td>
 </tr>
-<tr class="even">
-<td align="left">HEAT</td>
-<td align="right">9224</td>
-<td align="left">TORNADO</td>
-<td align="right">1649</td>
-<td align="left">FLOOD</td>
-<td align="right">2436131.5</td>
-<td align="left">FLOOD</td>
-<td align="right">364506.7</td>
+<tr>
+<td style="text-align:left;">
+HEAT
+</td>
+<td style="text-align:right;">
+9224
+</td>
+<td style="text-align:left;">
+TORNADO
+</td>
+<td style="text-align:right;">
+1649
+</td>
+<td style="text-align:left;">
+FLOOD
+</td>
+<td style="text-align:right;">
+2436131.5
+</td>
+<td style="text-align:left;">
+FLOOD
+</td>
+<td style="text-align:right;">
+364506.7
+</td>
 </tr>
-<tr class="odd">
-<td align="left">FLOOD</td>
-<td align="right">8604</td>
-<td align="left">FLOOD</td>
-<td align="right">1525</td>
-<td align="left">TORNADO</td>
-<td align="right">1391248.4</td>
-<td align="left">WIND</td>
-<td align="right">223939.8</td>
+<tr>
+<td style="text-align:left;">
+FLOOD
+</td>
+<td style="text-align:right;">
+8604
+</td>
+<td style="text-align:left;">
+FLOOD
+</td>
+<td style="text-align:right;">
+1525
+</td>
+<td style="text-align:left;">
+TORNADO
+</td>
+<td style="text-align:right;">
+1391248.4
+</td>
+<td style="text-align:left;">
+WIND
+</td>
+<td style="text-align:right;">
+223939.8
+</td>
 </tr>
-<tr class="even">
-<td align="left">WIND</td>
-<td align="right">8172</td>
-<td align="left">WIND</td>
-<td align="right">1188</td>
-<td align="left">HAIL</td>
-<td align="right">699320.4</td>
-<td align="left">TORNADO</td>
-<td align="right">100029.3</td>
+<tr>
+<td style="text-align:left;">
+WIND
+</td>
+<td style="text-align:right;">
+8172
+</td>
+<td style="text-align:left;">
+WIND
+</td>
+<td style="text-align:right;">
+1188
+</td>
+<td style="text-align:left;">
+HAIL
+</td>
+<td style="text-align:right;">
+699320.4
+</td>
+<td style="text-align:left;">
+TORNADO
+</td>
+<td style="text-align:right;">
+100029.3
+</td>
 </tr>
-<tr class="odd">
-<td align="left">LIGHTNING</td>
-<td align="right">5232</td>
-<td align="left">OTHER</td>
-<td align="right">1033</td>
-<td align="left">LIGHTNING</td>
-<td align="right">603710.3</td>
-<td align="left">DROUGHT</td>
-<td align="right">33954.4</td>
+<tr>
+<td style="text-align:left;">
+LIGHTNING
+</td>
+<td style="text-align:right;">
+5232
+</td>
+<td style="text-align:left;">
+OTHER
+</td>
+<td style="text-align:right;">
+1033
+</td>
+<td style="text-align:left;">
+LIGHTNING
+</td>
+<td style="text-align:right;">
+603710.3
+</td>
+<td style="text-align:left;">
+DROUGHT
+</td>
+<td style="text-align:right;">
+33954.4
+</td>
 </tr>
 </tbody>
 </table>
@@ -240,186 +336,449 @@ ggplot(time_result, aes(YEAR,INJURIES,color=NAME)) +
 <div id="appendix" class="section level3">
 <h3>Appendix</h3>
 <p>The full table of numbers for all categories in decreasing order according to the number of incidents is shown here.</p>
-<pre class="r"><code>kable(sum_data[order(sum_data$COUNT, decreasing=TRUE),])</code></pre>
+<pre class="r"><code>kable(sum_data[order(sum_data$COUNT, decreasing=TRUE),], format='html')</code></pre>
 <table>
 <thead>
-<tr class="header">
-<th align="left"></th>
-<th align="right">COUNT</th>
-<th align="right">INJURIES</th>
-<th align="right">FATALITIES</th>
-<th align="right">PROPDMG</th>
-<th align="right">CROPDMG</th>
+<tr>
+<th style="text-align:left;">
+</th>
+<th style="text-align:right;">
+COUNT
+</th>
+<th style="text-align:right;">
+INJURIES
+</th>
+<th style="text-align:right;">
+FATALITIES
+</th>
+<th style="text-align:right;">
+PROPDMG
+</th>
+<th style="text-align:right;">
+CROPDMG
+</th>
 </tr>
 </thead>
 <tbody>
-<tr class="odd">
-<td align="left">WIND</td>
-<td align="right">273938</td>
-<td align="right">8172</td>
-<td align="right">1188</td>
-<td align="right">3134605.26</td>
-<td align="right">223939.84</td>
+<tr>
+<td style="text-align:left;">
+WIND
+</td>
+<td style="text-align:right;">
+273938
+</td>
+<td style="text-align:right;">
+8172
+</td>
+<td style="text-align:right;">
+1188
+</td>
+<td style="text-align:right;">
+3134605.26
+</td>
+<td style="text-align:right;">
+223939.84
+</td>
 </tr>
-<tr class="even">
-<td align="left">HAIL</td>
-<td align="right">228569</td>
-<td align="right">1066</td>
-<td align="right">40</td>
-<td align="right">699320.38</td>
-<td align="right">585956.66</td>
+<tr>
+<td style="text-align:left;">
+HAIL
+</td>
+<td style="text-align:right;">
+228569
+</td>
+<td style="text-align:right;">
+1066
+</td>
+<td style="text-align:right;">
+40
+</td>
+<td style="text-align:right;">
+699320.38
+</td>
+<td style="text-align:right;">
+585956.66
+</td>
 </tr>
-<tr class="odd">
-<td align="left">FLOOD</td>
-<td align="right">82731</td>
-<td align="right">8604</td>
-<td align="right">1525</td>
-<td align="right">2436131.51</td>
-<td align="right">364506.73</td>
+<tr>
+<td style="text-align:left;">
+FLOOD
+</td>
+<td style="text-align:right;">
+82731
+</td>
+<td style="text-align:right;">
+8604
+</td>
+<td style="text-align:right;">
+1525
+</td>
+<td style="text-align:right;">
+2436131.51
+</td>
+<td style="text-align:right;">
+364506.73
+</td>
 </tr>
-<tr class="even">
-<td align="left">TORNADO</td>
-<td align="right">25936</td>
-<td align="right">23371</td>
-<td align="right">1649</td>
-<td align="right">1391248.44</td>
-<td align="right">100029.27</td>
+<tr>
+<td style="text-align:left;">
+TORNADO
+</td>
+<td style="text-align:right;">
+25936
+</td>
+<td style="text-align:right;">
+23371
+</td>
+<td style="text-align:right;">
+1649
+</td>
+<td style="text-align:right;">
+1391248.44
+</td>
+<td style="text-align:right;">
+100029.27
+</td>
 </tr>
-<tr class="odd">
-<td align="left">WINTER</td>
-<td align="right">19604</td>
-<td align="right">1891</td>
-<td align="right">278</td>
-<td align="right">151188.99</td>
-<td align="right">2498.99</td>
+<tr>
+<td style="text-align:left;">
+WINTER
+</td>
+<td style="text-align:right;">
+19604
+</td>
+<td style="text-align:right;">
+1891
+</td>
+<td style="text-align:right;">
+278
+</td>
+<td style="text-align:right;">
+151188.99
+</td>
+<td style="text-align:right;">
+2498.99
+</td>
 </tr>
-<tr class="even">
-<td align="left">SNOW</td>
-<td align="right">17705</td>
-<td align="right">1166</td>
-<td align="right">169</td>
-<td align="right">152552.63</td>
-<td align="right">2195.72</td>
+<tr>
+<td style="text-align:left;">
+SNOW
+</td>
+<td style="text-align:right;">
+17705
+</td>
+<td style="text-align:right;">
+1166
+</td>
+<td style="text-align:right;">
+169
+</td>
+<td style="text-align:right;">
+152552.63
+</td>
+<td style="text-align:right;">
+2195.72
+</td>
 </tr>
-<tr class="odd">
-<td align="left">LIGHTNING</td>
-<td align="right">15776</td>
-<td align="right">5232</td>
-<td align="right">817</td>
-<td align="right">603710.28</td>
-<td align="right">3585.61</td>
+<tr>
+<td style="text-align:left;">
+LIGHTNING
+</td>
+<td style="text-align:right;">
+15776
+</td>
+<td style="text-align:right;">
+5232
+</td>
+<td style="text-align:right;">
+817
+</td>
+<td style="text-align:right;">
+603710.28
+</td>
+<td style="text-align:right;">
+3585.61
+</td>
 </tr>
-<tr class="even">
-<td align="left">RAIN</td>
-<td align="right">12241</td>
-<td align="right">305</td>
-<td align="right">114</td>
-<td align="right">59426.21</td>
-<td align="right">12923.10</td>
+<tr>
+<td style="text-align:left;">
+RAIN
+</td>
+<td style="text-align:right;">
+12241
+</td>
+<td style="text-align:right;">
+305
+</td>
+<td style="text-align:right;">
+114
+</td>
+<td style="text-align:right;">
+59426.21
+</td>
+<td style="text-align:right;">
+12923.10
+</td>
 </tr>
-<tr class="odd">
-<td align="left">OTHER</td>
-<td align="right">10477</td>
-<td align="right">2382</td>
-<td align="right">1033</td>
-<td align="right">132982.08</td>
-<td align="right">23431.98</td>
+<tr>
+<td style="text-align:left;">
+OTHER
+</td>
+<td style="text-align:right;">
+10477
+</td>
+<td style="text-align:right;">
+2382
+</td>
+<td style="text-align:right;">
+1033
+</td>
+<td style="text-align:right;">
+132982.08
+</td>
+<td style="text-align:right;">
+23431.98
+</td>
 </tr>
-<tr class="even">
-<td align="left">FUNNEL CLOUD</td>
-<td align="right">6935</td>
-<td align="right">3</td>
-<td align="right">0</td>
-<td align="right">194.60</td>
-<td align="right">0.00</td>
+<tr>
+<td style="text-align:left;">
+FUNNEL CLOUD
+</td>
+<td style="text-align:right;">
+6935
+</td>
+<td style="text-align:right;">
+3
+</td>
+<td style="text-align:right;">
+0
+</td>
+<td style="text-align:right;">
+194.60
+</td>
+<td style="text-align:right;">
+0.00
+</td>
 </tr>
-<tr class="odd">
-<td align="left">FIRE</td>
-<td align="right">4240</td>
-<td align="right">1608</td>
-<td align="right">90</td>
-<td align="right">125223.29</td>
-<td align="right">9565.74</td>
+<tr>
+<td style="text-align:left;">
+FIRE
+</td>
+<td style="text-align:right;">
+4240
+</td>
+<td style="text-align:right;">
+1608
+</td>
+<td style="text-align:right;">
+90
+</td>
+<td style="text-align:right;">
+125223.29
+</td>
+<td style="text-align:right;">
+9565.74
+</td>
 </tr>
-<tr class="even">
-<td align="left">WATERSPOUT</td>
-<td align="right">3861</td>
-<td align="right">72</td>
-<td align="right">6</td>
-<td align="right">10780.70</td>
-<td align="right">0.00</td>
+<tr>
+<td style="text-align:left;">
+WATERSPOUT
+</td>
+<td style="text-align:right;">
+3861
+</td>
+<td style="text-align:right;">
+72
+</td>
+<td style="text-align:right;">
+6
+</td>
+<td style="text-align:right;">
+10780.70
+</td>
+<td style="text-align:right;">
+0.00
+</td>
 </tr>
-<tr class="odd">
-<td align="left">BLIZZARD</td>
-<td align="right">2745</td>
-<td align="right">806</td>
-<td align="right">101</td>
-<td align="right">26023.48</td>
-<td align="right">172.00</td>
+<tr>
+<td style="text-align:left;">
+BLIZZARD
+</td>
+<td style="text-align:right;">
+2745
+</td>
+<td style="text-align:right;">
+806
+</td>
+<td style="text-align:right;">
+101
+</td>
+<td style="text-align:right;">
+26023.48
+</td>
+<td style="text-align:right;">
+172.00
+</td>
 </tr>
-<tr class="even">
-<td align="left">HEAT</td>
-<td align="right">2648</td>
-<td align="right">9224</td>
-<td align="right">3138</td>
-<td align="right">3232.86</td>
-<td align="right">1473.18</td>
+<tr>
+<td style="text-align:left;">
+HEAT
+</td>
+<td style="text-align:right;">
+2648
+</td>
+<td style="text-align:right;">
+9224
+</td>
+<td style="text-align:right;">
+3138
+</td>
+<td style="text-align:right;">
+3232.86
+</td>
+<td style="text-align:right;">
+1473.18
+</td>
 </tr>
-<tr class="odd">
-<td align="left">DROUGHT</td>
-<td align="right">2512</td>
-<td align="right">19</td>
-<td align="right">6</td>
-<td align="right">4299.05</td>
-<td align="right">33954.40</td>
+<tr>
+<td style="text-align:left;">
+DROUGHT
+</td>
+<td style="text-align:right;">
+2512
+</td>
+<td style="text-align:right;">
+19
+</td>
+<td style="text-align:right;">
+6
+</td>
+<td style="text-align:right;">
+4299.05
+</td>
+<td style="text-align:right;">
+33954.40
+</td>
 </tr>
-<tr class="even">
-<td align="left">COLD</td>
-<td align="right">2463</td>
-<td align="right">320</td>
-<td align="right">451</td>
-<td align="right">15171.09</td>
-<td align="right">8934.79</td>
+<tr>
+<td style="text-align:left;">
+COLD
+</td>
+<td style="text-align:right;">
+2463
+</td>
+<td style="text-align:right;">
+320
+</td>
+<td style="text-align:right;">
+451
+</td>
+<td style="text-align:right;">
+15171.09
+</td>
+<td style="text-align:right;">
+8934.79
+</td>
 </tr>
-<tr class="odd">
-<td align="left">ICE</td>
-<td align="right">2195</td>
-<td align="right">2166</td>
-<td align="right">102</td>
-<td align="right">76353.02</td>
-<td align="right">1694.75</td>
+<tr>
+<td style="text-align:left;">
+ICE
+</td>
+<td style="text-align:right;">
+2195
+</td>
+<td style="text-align:right;">
+2166
+</td>
+<td style="text-align:right;">
+102
+</td>
+<td style="text-align:right;">
+76353.02
+</td>
+<td style="text-align:right;">
+1694.75
+</td>
 </tr>
-<tr class="even">
-<td align="left">FOG</td>
-<td align="right">1883</td>
-<td align="right">1077</td>
-<td align="right">81</td>
-<td align="right">17259.26</td>
-<td align="right">0.00</td>
+<tr>
+<td style="text-align:left;">
+FOG
+</td>
+<td style="text-align:right;">
+1883
+</td>
+<td style="text-align:right;">
+1077
+</td>
+<td style="text-align:right;">
+81
+</td>
+<td style="text-align:right;">
+17259.26
+</td>
+<td style="text-align:right;">
+0.00
+</td>
 </tr>
-<tr class="odd">
-<td align="left">LANDSLIDE</td>
-<td align="right">613</td>
-<td align="right">53</td>
-<td align="right">39</td>
-<td align="right">19117.94</td>
-<td align="right">37.00</td>
+<tr>
+<td style="text-align:left;">
+LANDSLIDE
+</td>
+<td style="text-align:right;">
+613
+</td>
+<td style="text-align:right;">
+53
+</td>
+<td style="text-align:right;">
+39
+</td>
+<td style="text-align:right;">
+19117.94
+</td>
+<td style="text-align:right;">
+37.00
+</td>
 </tr>
-<tr class="even">
-<td align="left">AVALANCHE</td>
-<td align="right">387</td>
-<td align="right">171</td>
-<td align="right">224</td>
-<td align="right">1628.90</td>
-<td align="right">0.00</td>
+<tr>
+<td style="text-align:left;">
+AVALANCHE
+</td>
+<td style="text-align:right;">
+387
+</td>
+<td style="text-align:right;">
+171
+</td>
+<td style="text-align:right;">
+224
+</td>
+<td style="text-align:right;">
+1628.90
+</td>
+<td style="text-align:right;">
+0.00
+</td>
 </tr>
-<tr class="odd">
-<td align="left">HURRICANE</td>
-<td align="right">288</td>
-<td align="right">1328</td>
-<td align="right">135</td>
-<td align="right">23757.25</td>
-<td align="right">10812.79</td>
+<tr>
+<td style="text-align:left;">
+HURRICANE
+</td>
+<td style="text-align:right;">
+288
+</td>
+<td style="text-align:right;">
+1328
+</td>
+<td style="text-align:right;">
+135
+</td>
+<td style="text-align:right;">
+23757.25
+</td>
+<td style="text-align:right;">
+10812.79
+</td>
 </tr>
 </tbody>
 </table>
